--- a/src/blocks/modules/about/about.scss
+++ b/src/blocks/modules/about/about.scss
@@ -1,8 +1,15 @@
 .about {
 	margin-bottom: 50px;
 	padding-top: 50px;
+	@include r(1200) {
+		padding-top: 25px;
+		margin-bottom: 25px;
+	}
 	&__title {
 		margin-bottom: 38px;
+		@include r(1200) {
+			margin-bottom: 20px;
+		}
 	}
 	&__columns {
 		display: flex;
