--- a/src/blocks/modules/case/case.scss
+++ b/src/blocks/modules/case/case.scss
@@ -11,11 +11,20 @@
 	@include r(1700) {
 
 	}
+	@include r(1200) {
+		padding-top: 25px;
+		margin-bottom: 25px;
+	}
 	&__header {
 		margin-bottom: 50px;
 		height: 60px;
 		display: flex;
-		// align-items: flex-end;
+		@include r(1200) {
+			// display: block;
+			height: auto;
+			margin-bottom: 15px;
+			justify-content: space-between;
+		}
 	}
 	&__title {
 		font-size: 30px;
@@ -31,7 +40,8 @@
 			margin-right: 80px;
 		}
 		@include r(1200) {
-			
+			font-size: 16px;
+			margin-right: 0px;
 		}
 
 		&--active {
@@ -46,6 +56,9 @@
 				background-color: $green;
 				content: "";
 				z-index: 1;
+				@include r(1200) {
+					bottom: 5px;
+				}
 			}
 			span {
 				position: relative;
@@ -62,31 +75,50 @@
 	&__content {
 		display: flex;
 		justify-content: space-between;
+		@include r(1200) {
+			display: block;	
+		}
 	}
 	&__articles {
 		width: calc(100% / 12 * 8 - 16px);
 		@include r(1700) {
 			width: calc(100% / 12 * 8 - 10px);
 		}
+		@include r(1200) {
+			width: 100%;
+			margin-bottom: 30px;
+		}
 	}
 	&__items {
 		margin-bottom: 15px;
+		@include r(1200) {
+			margin-bottom: 0px;
+		}
 	}
 	&__sidebar {
 		width: calc(100% / 12 * 4 - 16px);
 		@include r(1700) {
 			width: calc(100% / 12 * 4 - 10px);
 		}
+		@include r(1200) {
+			width: 100%;	
+		}
 	}
 	&__status {
 		font-weight: bold;
 		font-size: 30px;
+		@include r(1200) {
+			font-size: 22px;
+		}
 	}
 	&__link-all {
 		color: $green;
 		font-size: 20px;
 		&:hover {
 			text-decoration: none;
+		}
+		@include r(1200) {
+			font-size: 16px;
 		}
 	}
 	&__form {
@@ -98,19 +130,26 @@
 }
 
 .item {
-	width: 248px;
+	width: calc(25% - 18px);
 	text-decoration: none;
 	color: $dark;
 	margin-bottom: 30px;
 	@include r(1700) {
-		width: 180px;
 		margin-bottom: 25px;
+		width: calc(25% - 10px);
+	}
+	@include r(1200) {
+		width: calc(100% / 3 - 8px);
+	}
+	@include r(440) {
+		margin-bottom: 25px;
+		width: calc(50% - 8px);
 	}
 	&:hover {
 		opacity: 0.7;
 	}
 	&--clear {
-		margin-bottom: 0px;
+		margin-bottom: 0px !important;
 		height: 0px;
 		overflow: hidden;
 		padding: 0px;
@@ -118,12 +157,15 @@
 	}
 	&__thumb {
 		box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
-		height: 248px;
+		// height: 248px;
 		width: 100%;
 		margin-bottom: 20px;
 		@include r(1700) {
-			height: 180px;
+			// height: 180px;
 			margin-bottom: 16px;
+		}
+		@include r(440) {
+			margin-bottom: 10px;
 		}
 		img {
 			height: 100%;
@@ -138,12 +180,19 @@
 		@include r(1700) {
 			font-size: 16px;		
 		}
+		@include r(440) {
+			font-weight: normal;
+			font-size: 16px;
+		}
 	}
 }
 
 .status {
 	display: flex;
 	align-items: center;
+	@include r(1200) {
+		overflow: hidden;
+	}
 	&__input {
 		flex-grow: 1;
 		min-width: 0;
@@ -155,6 +204,11 @@
 		&:placeholder {
 			font-family: $font-main;
 		}
+		@include r(1200) {
+			border-radius: 4px 0px 0px 4px;
+			padding-left: 10px;
+			padding-right: 10px;
+		}
 	}
 	&__button {
 		padding-left: 32px;
@@ -163,6 +217,10 @@
 			padding-left: 14px;
 			padding-right: 14px;
 		}
+		@include r(1200) {
+			border-radius: 0px 4px 4px 0px;
+			font-size: 14px;
+		}
 	}
 }
 
@@ -170,6 +228,10 @@
 	background-color: $green;
 	color: $dark;
 	padding: 32px 21px;
+	@include r(1200) {
+		border-radius: 4px;
+		padding: 20px 10px;
+	}
 	&__title {
 		margin-bottom: 20px;
 		font-weight: bold;
@@ -177,6 +239,10 @@
 		line-height: 1.3;
 		@include r(1700) {
 			margin-bottom: 10px;
+		}
+		@include r(1200) {
+			font-size: 22px;
+			margin-bottom: 15px;
 		}
 		strong {
 			color: $light;
@@ -197,6 +263,10 @@
 			@include r(1700) {
 				padding-top: 14px;
 				padding-bottom: 14px;
+			}
+			@include r(1200) {
+				padding-top: 10px;
+				padding-bottom: 10px;
 			}
 			&:first-child {
 				width: 60%;
