--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -23,6 +23,10 @@
 	}
 	&__content {
 		padding-right: 25px;
+		// margin-bottom: 67px;
+		@include r(1200) {
+			padding-right: 5px;
+		}
 	}
 	&__close {
 		padding: 10px;
@@ -31,12 +35,19 @@
 		@include r(1700) {
 			
 		}
+		@include r(1200) {
+			padding: 6px;
+		}
 		&:hover {
 			opacity: 0.7;
 		}
 		svg {
 			width: 20px;
 			height: 20px;
+			@include r(1200) {
+				width: 14px;
+				height: 14px;
+			}
 		}
 	}
 }
