--- a/src/views/4-page.html
+++ b/src/views/4-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>2. Новинки</title>
+    <title>4. Каталог</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
@@ -19,6 +19,13 @@
                             <div class="catalog__header">
                                 <div class="toolbar">
                                     <div class="sort-type">
+
+                                        <a href="#filter" class="sort-type__btn sort-type__btn--filter" data-fancybox="filter-modal">
+                                            <svg class="icon-svg">
+                                                <use xlink:href="img/sprites/sprite.svg#icon-sort"></use>
+                                            </svg>
+                                        </a>
+
                                         <button class="sort-type__btn sort-type__btn--active sort-type__btn--masonry">
                                             <svg class="icon-svg">
                                                 <use xlink:href="img/sprites/sprite.svg#icon-masonry"></use>
@@ -73,8 +80,8 @@
                                 </div>
                             </div>
                             <div class="catalog__articles articles">
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
@@ -155,8 +162,8 @@
                                     </button>
                                 </article>
 
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
@@ -241,8 +248,8 @@
                                     </button>
                                 </article>
 
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -327,8 +334,8 @@
                                     </button>
                                 </article>
 
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
@@ -413,8 +420,8 @@
                                     </button>
                                 </article>
 
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -494,8 +501,8 @@
                                     </button>
                                 </article>
 
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -580,8 +587,8 @@
                                     </button>
                                 </article>
 
-                                <article href="" class="card">
-                                    <a href class="card__thumb">
+                                <article class="card">
+                                    <a href class="resized card__thumb">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
