--- a/src/blocks/modules/filter/filter.scss
+++ b/src/blocks/modules/filter/filter.scss
@@ -1,5 +1,13 @@
 .filter {
 	padding-right: 8px;
+	@include r(1200) {
+		// background-color: green;
+		// position: fixed;
+		// top: 0px;
+		padding: 20px;
+		max-width: 320px;
+		width: 100%;
+	}
 	&__section {
 		border-bottom: 2px solid #F2F2F2;
 		margin-bottom: 32px;
@@ -19,15 +27,22 @@
 		padding-right: 10px;
 		&--scroll {
 			max-height: 280px;
-			// min-height: 0px;
 			height: auto;
-			// overflow-y: scroll;
+			@include r(1200) {
+				max-height: 10000px !important;
+			}
 			.simplebar-vertical {
 				width: 4px;
 				background-color: #F2F2F2;
+				// @include r(1200) {
+				// 	display: none;
+				// }
 			}
 			.simplebar-scrollbar {
 				background-color: #BDBDBD;
+				// @include r(1200) {
+				// 	display: none;
+				// }
 				&:before {
 					display: none;
 				}
@@ -37,7 +52,7 @@
 	&__btn {
 		font-weight: normal;
 		text-transform: uppercase;
-		width: 108px;
+		width: calc(50% - 8px);
 		font-size: 16px;
 	}
 	&__block-header {
@@ -60,6 +75,14 @@
 		cursor: pointer;
 		transition: 0.3s all;
 		margin-right: 10px;
+	}
+}
+
+.filter-fancybox {
+	text-align: left;
+	padding: 0px;
+	.fancybox-content {
+		padding: 0px;
 	}
 }
 
