--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -269,6 +269,10 @@
 		margin-left: 85px;
 		margin-right: 85px;
 		font-weight: bold;
+		@include r(1200) {
+			margin-left: 20px;
+			margin-right: 20px;
+		}
 		span {
 			color: $green;
 			font-size: 50px;
