--- a/src/views/2-page.html
+++ b/src/views/2-page.html
@@ -35,7 +35,7 @@
                             </h2>
                             <div class="articles single__offers">
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
@@ -117,7 +117,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
@@ -203,7 +203,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -289,7 +289,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
@@ -375,7 +375,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -456,7 +456,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -542,7 +542,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
@@ -628,7 +628,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -709,7 +709,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -795,7 +795,7 @@
                                 </article>
 
                                 <article href="" class="card">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
