--- a/src/views/6-page.html
+++ b/src/views/6-page.html
@@ -14,11 +14,11 @@
                     <div class="product__grid">
                         <div class="grid">
                             <div class="grid__column grid__column--4">
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--9">
                                     @@include("../blocks/modules/slider/slider.html")
                                 </div>
 
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--5">
                                     <div class="product-files">
                                         <p class="title-small title-small--product product-files__title">
                                             <span>
@@ -68,19 +68,19 @@
                                     </div>
                                 </div>
 
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--4">
 
                                 </div>
                             </div>
 
                             <div class="grid__column grid__column--5">
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--10">
                                     <h1 class="product-title">
                                         Варочная поверхность FRANKE TREND LINE FHTL 755 4G TC BT C черная матовая
                                     </h1>
                                 </div>
 
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--6">
                                     <div class="product-params">
                                         <p class="title-small title-small--product product-params__title">
                                             <span>
@@ -165,7 +165,7 @@
                                     </div>
                                 </div>
 
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--7">
                                     <div class="product-info">
                                         <p class="title-small title-small--product product-info__title">
                                             <span>
@@ -245,7 +245,7 @@
                             </div>
 
                             <div class="grid__column grid__column--3">
-                                <div class="grid__block grid__block--sticky grid__block--product-card">
+                                <div class="grid__block grid__block--sticky grid__block--product-card mobile-order mobile-order--8">
                                     <div class="product-card">
                                         <h3 class="product-card__title">
                                             Варочная поверхность FRANKE TREND LINE FHTL 755 4G TC BT C черная матовая
