--- a/src/blocks/modules/service/service.scss
+++ b/src/blocks/modules/service/service.scss
@@ -6,17 +6,18 @@
 	}
 	&__column {
 		margin-bottom: 50px;
+		@include r(1200) {
+			margin-bottom: 0px;
+			width: 100%;
+		}
 		&--4 {
 			width: calc(100% / 10 * 4 - 16px);
-			// background-color: red;
 		}
 		&--6 {
 			width: calc(100% / 10 * 6 - 16px);
-			// background-color: green;
 		}
 		&--8 {
 			width: calc(100% / 10 * 8 - 16px);
-			// background-color: blue;
 		}
 	}
 	&__ill {
@@ -33,6 +34,11 @@
 		font-weight: bold;
 		font-size: 30px;
 		line-height: 1.3;
+		@include r(1200) {
+			font-size: 20px;
+			margin: 0px;
+			margin-bottom: 25px;
+		}
 	}
 }
 
