--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -41,8 +41,11 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	&__column {
-		// margin-right: 32px;
 		margin-bottom: 50px;
+		@include r(1200) {
+			margin-bottom: 0px;
+			width: 100%;
+		}
 		&--3 {
 			width: calc(100% / 12 * 3 - 12px);
 		}
@@ -60,9 +63,64 @@
 		}
 	}
 	&__block {
+		@include r(1200) {
+			width: 100%;
+			margin-bottom: 30px;
+		}
 		&--sticky {
 			position: sticky;
 			top: 15px;
+			@include r(1200) {
+				position: static;
+			}
+		}
+	}
+}
+
+.mobile-order {
+	&--10 {
+		@include r(1200) {
+			order: -10;
+		}
+	}
+	&--9 {
+		@include r(1200) {
+			order: -9;
+		}
+	}
+	&--8 {
+		@include r(1200) {
+			order: -8;
+		}
+	}
+	&--7 {
+		@include r(1200) {
+			order: -7;
+		}
+	}
+	&--6 {
+		@include r(1200) {
+			order: -6;
+		}
+	}
+	&--5 {
+		@include r(1200) {
+			order: -5;
+		}
+	}
+	&--4 {
+		@include r(1200) {
+			order: -4;
+		}
+	}
+	&--3 {
+		@include r(1200) {
+			order: -3;
+		}
+	}
+	&--2 {
+		@include r(1200) {
+			order: -2;
 		}
 	}
 }
