--- a/src/views/13-page.html
+++ b/src/views/13-page.html
@@ -56,13 +56,13 @@
                             <section class="service">
                                 <div class="service__grid">
                                     <div class="service__column service__column--4">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--8">
                                             @@include("../blocks/modules/product/product-image.html")
                                         </div>
                                         
                                     </div>
                                     <div class="service__column service__column--6">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
                                                     Заточка инструмента
@@ -76,7 +76,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--7">
                                             <div class="product-files">
                                                 <p class="title-small title-small--product product-files__title">
                                                     <span>
@@ -95,7 +95,7 @@
                                         </div>
                                     </div>
                                     <div class="service__column service__column--8">
-                                        <div class="grid-block">
+                                        <div class="grid__block mobile-order mobile-order--9">
                                             <div class="service-table">
                                                 <p class="title-small title-small--product service-table__title">
                                                     <span>
