--- a/src/views/14-page.html
+++ b/src/views/14-page.html
@@ -56,12 +56,12 @@
                             <section class="service">
                                 <div class="service__grid">
                                     <div class="service__column service__column--4">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--9">
                                             @@include("../blocks/modules/product/product-image.html")
                                         </div>
                                     </div>
                                     <div class="service__column service__column--6">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
                                                     Нарезка и обработка стекла/зеркала
