--- a/src/views/16-page.html
+++ b/src/views/16-page.html
@@ -56,10 +56,10 @@
                             <section class="service">
                                 <div class="service__grid">
                                     <div class="service__column service__column--4">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--6">
                                             @@include("../blocks/modules/product/product-image.html")
                                         </div>
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--7">
                                             <div class="service-text">
                                                 <div class="service-text__content text">
                                                     <p>
@@ -84,7 +84,7 @@
                                         </div>
                                     </div>
                                     <div class="service__column service__column--6">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
                                                     Уд@ленный заказ
@@ -110,7 +110,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--9">
                                             <div class="product-files">
                                                 <p class="title-small title-small--product product-files__title">
                                                     <span>
@@ -143,7 +143,7 @@
                                                 </a>
                                             </div>
                                         </div>
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--8">
                                             <div class="service-text">
                                                 <div class="service-text__content text">
                                                     <p>
