--- a/src/views/9-page.html
+++ b/src/views/9-page.html
@@ -56,10 +56,10 @@
                             <section class="service">
                                 <div class="service__grid">
                                     <div class="service__column service__column--4">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--9">
                                             @@include("../blocks/modules/slider/slider.html")
                                         </div>
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--8">
                                             <div class="product-files">
                                                 <p class="title-small title-small--product product-files__title">
                                                     <span>
@@ -86,7 +86,7 @@
                                         </div>
                                     </div>
                                     <div class="service__column service__column--6">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
                                                     Изготовление дверей для шкафов-купе
@@ -146,7 +146,7 @@
                                         </div>
                                     </div>
                                     <div class="service__column service__column--8">
-                                        <div class="grid__block">
+                                        <div class="grid__block mobile-order mobile-order--7">
                                             <div class="service-catalog">
                                                 <p class="title-small title-small--product service-catalog__title">
                                                     <span>
